# workledger

./: .dockerignore  .env.example  .gitignore  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmark-data/software_capex_review_v1/: manifest.json
benchmark-data/software_capex_review_v1/cases/: ambiguous_review.jsonl  external_product_feature.jsonl  internal_tooling.jsonl  maintenance_hotfix.jsonl
docs/: adapters.md  builder-demo.md  cli.md  comparative-economics.md  contributing-policies.md  data-model.md  deployment.md  faq.md  framework-examples.md  getting-started.md  how-it-works.md  index.md  installation.md  open-traces.md  policy-packs.md  public-traces-demo.md  reporting.md  schema-spec.md  software-capex.md  trace-to-work.md
docs/assets/: builder-demo-report.html  hf-gaia-demo-report.html  hf-smoltrace-demo-report.html
docs/releases/: v0.1.0.md
examples/: README.md  crewai_to_workledger.py  demo_coding.py  demo_marketing.py  demo_support.py  hf_public_traces.py  langchain_to_workledger.py  otel_to_workledger.py  tiny_pipeline.py
hf/software-capex-review/: README.md  runtime.py
hf/software-capex-review/dataset/: README.md  software_capex_review_sample.jsonl
hf/software-capex-review/notebook/: workledger_capex_demo.ipynb
hf/software-capex-review/space/: app.py  requirements.txt
policies/: ifrs_book_v1.yaml  management_reporting_v1.yaml  software_capex_review_v1.yaml  tax_r_and_d_v1.yaml  us_gaap_book_v1.yaml
schemas/: README.md  openapi.json  workledger.schema.json
schemas/examples/: classification_trace.json  observation_span.json  work_unit.json
spec/: extensions.md  policy-pack.md  versioning.md
src/workledger/: __init__.py  cli.py  config.py  demo.py  economics.py  pipeline.py  review.py  schema.py
src/workledger/adapters/: __init__.py  huggingface.py
src/workledger/benchmark/: __init__.py  engine.py
src/workledger/ingest/: __init__.py  enrich.py  loader.py  normalize.py
src/workledger/models/: __init__.py  core.py  enums.py
src/workledger/policy/: __init__.py  builtin.py  engine.py  loader.py
src/workledger/reporting/: __init__.py  engine.py
src/workledger/rollup/: __init__.py  engine.py  features.py
src/workledger/storage/: __init__.py  duckdb.py  schema.py
src/workledger/utils/: __init__.py  ids.py
src/workledger_observe/: __init__.py  canonical.py  recorder.py
src/workledger_server/: __init__.py  app.py
tests/: test_benchmark.py  test_capex_policy.py  test_cli.py  test_hf_bundle.py  test_huggingface_adapters.py  test_normalize.py  test_openapi_spec.py  test_pipeline.py  test_policy.py  test_property_normalize.py  test_property_policy.py  test_reports.py  test_review.py  test_rollup.py  test_rollup_features.py  test_schema_bundle.py  test_server.py
tests/fixtures/: hf_gaia_sample.json  hf_smoltrace_sample.json  openinference_support.jsonl  otel_marketing.json
